@@ -1,3 +1,9 @@
+2001-12-25  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>
+	
+	* [w3m-dev 02714] 
+	* scripts/w3mhelp.cgi.in: $helpdir should be handled by cygwin_pathconv
+		when $CYGPATH=1
+
 2001-12-25  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02715] bugfix in scripts/multipart/multipart.cgi.in
@@ -1475,4 +1481,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.166 2001/12/25 09:12:28 ukai Exp $
+$Id: ChangeLog,v 1.167 2001/12/25 09:16:23 ukai Exp $
